fix collapsing header when name is long #4204

--- a/app/webroot/less/header.less
+++ b/app/webroot/less/header.less
@@ -104,7 +104,7 @@
   border-right: 1px solid #ccc;
   color: rgb(80, 80, 80);
   vertical-align: middle;
-  max-width: 112px;
+  max-width: 56px;
   overflow: hidden;
   text-overflow: ellipsis;
   max-height: 18px;
